--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <script src="https://static.opentok.com/v2/js/opentok.min.js"></script>
+
     <title>React App</title>
   </head>
   <body>
